[gd_scene load_steps=18 format=3 uid="uid://d0u5bw4owtrev"]

[ext_resource type="Script" uid="uid://cpi5w5meyf7w1" path="res://Main/Characters/Player/player.gd" id="1_i3pqv"]
[ext_resource type="PackedScene" uid="uid://pake15kqry6s" path="res://Main/Camera/shakeable_camera.tscn" id="2_np5j3"]
[ext_resource type="PackedScene" uid="uid://ck1km5ocdhq0i" path="res://Main/Weapons/WeaponManager/weapon_manager.tscn" id="4_dqkch"]
[ext_resource type="Script" uid="uid://cgpmhci7164s6" path="res://Main/Utility/Components/hitbox_component.gd" id="4_jbyc3"]
[ext_resource type="Script" uid="uid://v8gickpnd8q0" path="res://Main/Utility/Components/health_component.gd" id="4_np5j3"]
[ext_resource type="PackedScene" uid="uid://dkwgcnqwhsgmk" path="res://Main/Utility/AudioManager/audio_manager.tscn" id="7_0m230"]
[ext_resource type="AudioStream" uid="uid://bvfqtim6cjqyi" path="res://assets/Sounds/Sound Effects/Player/player_dies.wav" id="8_mj6av"]
[ext_resource type="AudioStream" uid="uid://ho6gtirkyfsu" path="res://assets/Sounds/Sound Effects/Player/get_damaged.wav" id="9_nr1kw"]
[ext_resource type="AudioStream" uid="uid://3u313pe8imob" path="res://assets/Sounds/Sound Effects/Player/healing.mp3" id="10_018x3"]
[ext_resource type="AudioStream" uid="uid://ka6e0ryfw0id" path="res://assets/Sounds/Sound Effects/Player/jumping.wav" id="11_12kvs"]
[ext_resource type="AudioStream" uid="uid://cqgbupjmma3ls" path="res://assets/Sounds/Sound Effects/Player/jumping_twice.wav" id="12_bb5hd"]
[ext_resource type="Script" uid="uid://bb0fsybe7scav" path="res://Main/Characters/Player/player_ui_manager.gd" id="12_r13nr"]
[ext_resource type="AudioStream" uid="uid://wbvdp60yqvuy" path="res://assets/Sounds/Sound Effects/Player/slide.wav" id="13_hkfr5"]
[ext_resource type="AudioStream" uid="uid://witk1yf77mrq" path="res://assets/Sounds/Sound Effects/Player/walking1.wav" id="14_1fkfj"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2hs0m"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1jxqw"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereMesh" id="SphereMesh_y7cse"]
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d6rcs"]
radius = 0.735943
height = 2.50938

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_layer = 8
script = ExtResource("1_i3pqv")
ground_friction = 150.0
air_cap = 5.0
air_accel = 25.0
air_speed_limit = 40.0
air_deccel = 10.0
air_friction = 150.0
jump_velocity = 5.0
slide_height = 1.0
DASH_SPEED = 80
dash_accel = 2
LEAN_AMOUNT = 1.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18267, 0)
mesh = SubResource("CapsuleMesh_2hs0m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18267, 0)
shape = SubResource("ConvexPolygonShape3D_1jxqw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="LeanPivot" type="Node3D" parent="."]

[node name="Head" type="Node3D" parent="LeanPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="ShakeableCamera" parent="LeanPivot/Head" instance=ExtResource("2_np5j3")]
collision_layer = 128
collision_mask = 0
max_x = 5.0
max_y = 5.0
max_z = 2.5

[node name="Weapon_Manager" parent="LeanPivot/Head" instance=ExtResource("4_dqkch")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.291509, -0.296324, -0.979354)

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeanPivot/Head"]
mesh = SubResource("SphereMesh_y7cse")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_np5j3")

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 40
collision_mask = 0
script = ExtResource("4_jbyc3")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18267, 0)
shape = SubResource("ConvexPolygonShape3D_1jxqw")

[node name="PlayerUIManager" type="Node" parent="." node_paths=PackedStringArray("health_component", "weapon_manager")]
script = ExtResource("12_r13nr")
health_component = NodePath("../HealthComponent")
weapon_manager = NodePath("../LeanPivot/Head/Weapon_Manager")

[node name="RingPickupArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="RingPickupArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13759, 0)
shape = SubResource("CapsuleShape3D_d6rcs")
[node name="AudioManager" parent="." instance=ExtResource("7_0m230")]

[node name="PlayerDies" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("8_mj6av")

[node name="PlayerGetsDamaged" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("9_nr1kw")

[node name="PlayerHealing" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("10_018x3")

[node name="PlayerJumping" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("11_12kvs")

[node name="PlayerJumpingTwice" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("12_bb5hd")

[node name="PlayerSlide" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("13_hkfr5")

[node name="PlayerWalking1" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("14_1fkfj")

[connection signal="dashInput" from="LeanPivot/Head/Weapon_Manager" to="." method="_on_weapon_manager_dash_input"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="area_entered" from="RingPickupArea" to="." method="_on_ring_pickup_area_area_entered"]
